Misc repo setup, remove uneeded files

--- a/.github/ISSUE_TEMPLATE/02_enhancements.yml
+++ b/.github/ISSUE_TEMPLATE/02_enhancements.yml
@@ -5,7 +5,7 @@ body:
   attributes:
     value: |
       Thank you for taking the time to fill out an issue. This template is meant for feature requests and improvements to already existing functionality.
-      If you require help with the Flipper zero and its firmware, we ask that you join [our forum](https://forum.flipperzero.one)
+      If you require help with the Flipper zero or SquachWare, we ask that you join [our discord](https://discord.gg/squachtopia)
 - type: textarea
   id: proposal
   attributes:
