--- a/.github/ISSUE_TEMPLATE/03_feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/03_feature_request.yml
@@ -6,7 +6,7 @@ body:
   attributes:
     value: |
       Thank you for taking the time to fill out an issue, this template is meant for any feature suggestions.
-      If you require help with the Flipper zero and its firmware, we ask that you join [our forum](https://forum.flipperzero.one)
+      If you require help with the Flipper zero or SquachWare, we ask that you join [our discord](https://discord.gg/squachtopia)
 - type: textarea
   id: proposal
   attributes:
