--- a/.github/workflows/lint_c.yml
+++ b/.github/workflows/lint_c.yml
@@ -9,14 +9,9 @@ on:
       - '*'
   pull_request:
 
-env:
-  TARGETS: f7
-  FBT_TOOLCHAIN_PATH: /runner/_work
-  SET_GH_OUTPUT: 1
-
 jobs:
   lint_c_cpp:
-    runs-on: [self-hosted,FlipperZeroShell]
+    runs-on: ubuntu-latest
     steps:
       - name: 'Decontaminate previous build leftovers'
         run: |
