--- a/.github/ISSUE_TEMPLATE/01_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/01_bug_report.yml
@@ -5,8 +5,8 @@ body:
 - type: markdown
   attributes:
     value: |
-      Thank you for taking the time to fill out an issue, this template is meant for any issues related to the Flipper Zero firmware.
-      If you require help with the Flipper zero and its firmware, we ask that you join [our forum](https://forum.flipperzero.one)
+      Thank you for taking the time to fill out an issue, this template is meant for any issues related to the SquachWare Custom firmware.
+      If you require help with the Flipper zero or SquachWare, we ask that you join [our discord](https://discord.gg/squachtopia)
 - type: textarea
   id: description
   attributes:
